--- a/EconomyApplication/pom.xml
+++ b/EconomyApplication/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>21-ea+5</version>
         </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.7</version>
+            <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
