--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -19,7 +19,7 @@ test:
     paths:
       - target/surefire-reports/
     reports:
-      junit: target/surefire-reports/TEST-no.ntnu.idatt1002.demo.repo.MyEntityRepoTest.xml
+      junit: target/surefire-reports/TEST-edu.ntnu.g14.TestUser.xml
       coverage_report:
         coverage_format: cobertura
         path: target/jacoco/coverage-reports/jacoco.xml
