--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>edu.ntnu.g14</groupId>
-    <artifactId>idatt2002demo</artifactId>
+    <artifactId>EconomyApplication</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>demo</name>
     <packaging>jar</packaging>
