--- a/gitlab-ci.yml
+++ b/gitlab-ci.yml
@@ -30,7 +30,7 @@ package:
     - mvn clean package
   artifacts:
     paths:
-      - target/idatt2002demo-1.0-SNAPSHOT-jar-with-dependencies.jar
+      - target/g14-1.0-SNAPSHOT-jar-with-dependencies.jar
 
 generatepdf:
   image: ubuntu:20.04 #20.04  # vi kjører dette i en docker container, som kjører Ubuntu Linux
